umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_sih3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{Si^1v3}"
      - "{Hv1}"
      - "{Hv1}"
      - "{Hv1}"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{Si^1v3}"
      - "{Hv1}"
      - "{Hv1}"
      - "{Hv1}"
    bonds:
      - "-"
      - "-"
      - "-"
